--- a/layout/footer.html
+++ b/layout/footer.html
@@ -8,7 +8,8 @@
   <i class="material-icons md-48">notifications</i>
 </button>
 <button>
-  <i class="material-icons md-48">info</i>
+  <i class="material-icons md-48">shopping_cart</i>
 </button>
+<!-- <button>
 <i class="material-icons md-48">info</i>
-</button>
+</button> -->
