--- a/layout/header.html
+++ b/layout/header.html
@@ -1,26 +1,26 @@
 <div class="header">
   <div class="profile pulse">
-    <img alt="Profile Icon" src="images/profile_icon.png">
+    <img alt="Profile Icon" src="images/favicon.ico">
   </div>
   <div data-ui-field="header-box" layout="row center-center">
     <div class="title">
-      Home
+      Farm To Market
     </div>
     <div data-ui-load="shared/input_box"></div>
     <div class="title">
       Notifications
     </div>
     <div class="title">
-      Messages
+      Cart
     </div>
   </div>
 </div>
 <div data-ui-field="header-tools">
   <div class="topics" data-ui-load="@lib/controllers/view_pager" data-ui-options="options.topicIndicator">
     <div>
-      Top Stories
+      Vegetables
     </div>
-    <div>
+    <!-- <div>
       World
     </div>
     <div>
@@ -28,6 +28,6 @@
     </div>
     <div>
       Travel
-    </div>
+    </div> -->
   </div>
 </div>
