--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
 }
 .sidebar header {
   font-size: 22px;
+  font-weight: bold;
   color: white;
   line-height: 70px;
   text-align: center;
